--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "noxe",
+  "name": "Note",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -12,16 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.0.9",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.0.6",
     "@angular/compiler": "~11.0.6",
     "@angular/core": "~11.0.6",
     "@angular/forms": "~11.0.6",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.0.6",
     "@angular/platform-browser-dynamic": "~11.0.6",
     "@angular/router": "~11.0.6",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
+    "jwt-decode": "^3.1.2",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-owl-carousel-o": "^5.0.0",
     "ngx-spinner": "^10.0.1",
@@ -36,6 +39,7 @@
     "@angular/cli": "~11.0.6",
     "@angular/compiler-cli": "~11.0.6",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.6",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
